feat: implementa crud de usuário, criptografia na senha. fix: arruma retorno dos usuários no get
