# pkg/handlers/handlers.go
@@ -8,6 +8,7 @@ import (
 	"golang_api/pkg/repositories"
 
 	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
 )
 
 // GetUser godoc
@@ -77,11 +78,17 @@ func CreateUser(c *gin.Context) {
 		return
 	}
 
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(userDTO.Usr_password), bcrypt.DefaultCost)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Failed to hash password"})
+		return
+	}
+
 	userRepo := repositories.NewUserRepository()
 	user := models.Tb_User{
 		Usr_name:     userDTO.Usr_name,
 		Usr_email:    userDTO.Usr_email,
-		Usr_password: userDTO.Usr_password,
+		Usr_password: string(hashedPassword),
 	}
 
 	userID, err := userRepo.Insert(&user)
@@ -97,4 +104,92 @@ func CreateUser(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, userResponse)
+}
+
+// UpdateUser godoc
+// @Summary Update an existing user
+// @Description UpdateUser updates an existing user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param user_id path int true "User ID"
+// @Param user body models.UserDTO true "User DTO"
+// @Success 200 {object} models.UserResponse
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 404 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Router /user/{user_id} [put]
+func UpdateUser(c *gin.Context) {
+	userIDParam := c.Param("user_id")
+	userRepo := repositories.NewUserRepository()
+
+	userID, err := strconv.Atoi(userIDParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid user ID"})
+		return
+	}
+
+	var userDTO models.UserDTO
+	if err := c.ShouldBindJSON(&userDTO); err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid input"})
+		return
+	}
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(userDTO.Usr_password), bcrypt.DefaultCost)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Failed to hash password"})
+		return
+	}
+
+	user := models.Tb_User{
+		Usr_id:       userID,
+		Usr_name:     userDTO.Usr_name,
+		Usr_email:    userDTO.Usr_email,
+		Usr_password: string(hashedPassword),
+	}
+
+	err = userRepo.Update(&user)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Internal Server Error"})
+		return
+	}
+
+	userResponse := models.UserResponse{
+		Usr_id:    user.Usr_id,
+		Usr_name:  user.Usr_name,
+		Usr_email: user.Usr_email,
+	}
+
+	c.JSON(http.StatusOK, userResponse)
+}
+
+// DeleteUser godoc
+// @Summary Delete a user by ID
+// @Description DeleteUser deletes a user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param user_id path int true "User ID"
+// @Success 204
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 404 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Router /user/{user_id} [delete]
+func DeleteUser(c *gin.Context) {
+	userIDParam := c.Param("user_id")
+	userRepo := repositories.NewUserRepository()
+
+	userID, err := strconv.Atoi(userIDParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid user ID"})
+		return
+	}
+
+	err = userRepo.Delete(userID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Internal Server Error"})
+		return
+	}
+
+	c.Status(http.StatusNoContent)
 }
